--- a/ParkinsonV.ipynb
+++ b/ParkinsonV.ipynb
@@ -344,7 +344,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
-    "#This function have 2 parameters: dif and v \n",
+    "#This function has 2 parameters: dif and v \n",
     "#Return TOP-20 stocks with Difference(pv - v) > dif and Volatility < v\n",
     "#in others words this function helps the user to find the stocks with a minimum Difference given an upper bound of volatility\n",
     "\n",
